fix: update terminology from "mineração de dados" to "data mining" in conclusion section

--- a/jpynotebook.ipynb
+++ b/jpynotebook.ipynb
@@ -394,7 +394,7 @@
    "metadata": {},
    "source": [
     "## Conclusão\n",
-    "Neste notebook, exploramos o dataset de habitação, aplicamos técnicas de regressão, clustering e mineração de dados, gerando vários insights.\n"
+    "Neste notebook, exploramos o dataset de habitação, aplicamos técnicas de regressão, clustering e data mining, gerando vários insights.\n"
    ]
   }
  ],
