fix: update terminology and improve clarity in Jupyter notebook

--- a/jpynotebook.ipynb
+++ b/jpynotebook.ipynb
@@ -32,10 +32,10 @@
     "\n",
     "5. **Modelagem Preditiva**  \n",
     "   - Treino e avaliação de modelos de regressão (e.g., Regressão Linear, Árvores de Decisão, Random Forest).\n",
-    "   - Avaliação de métricas como R².\n",
+    "   - Avaliação de métricas como R² e RMSE.\n",
     "\n",
     "6. **Clustering**  \n",
-    "   - Análise do número ótimo de clusters (Método do Cotovelo e Silhueta).\n",
+    "   - Análise do número ótimo de clusters (Método do Elbow e Silhueta).\n",
     "   - Treino de um modelo K-Means.\n",
     "\n",
     "7. **Mineração de Regras de Associação**  \n",
@@ -46,7 +46,7 @@
     "   - Construção e avaliação de um modelo de classificação com base na variável `ocean_proximity`.\n",
     "\n",
     "### Objetivo\n",
-    "O objetivo deste trabalho foi aplicar técnicas de análise de dados, machine learning e mineração de dados para compreender melhor o conjunto de dados e obter insights úteis. Além disso, foram avaliadas abordagens para prever o valor médio das casas e identificar padrões.\n",
+    "O objetivo deste trabalho foi aplicar técnicas de análise de dados, machine learning e data mining para compreender melhor o conjunto de dados e obter insights úteis. Além disso, foram avaliadas abordagens para prever o valor médio das casas e identificar padrões.\n",
     "\n"
    ]
   },
@@ -55,7 +55,7 @@
    "metadata": {},
    "source": [
     "## Carregamento e Visualização Inicial dos Dados\n",
-    "Nesta seção, carregamos o dataset e exploramos suas características principais.\n"
+    "Nesta secção, carregamos o dataset e exploramos suas características principais.\n"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "metadata": {},
    "source": [
     "## Treinamento e Avaliação de Modelos\n",
-    "Treinamos diferentes modelos de regressão e avaliamos os seus desempenhos com métrica R².\n"
+    "Treinamos diferentes modelos de regressão e avaliamos os seus desempenhos com métrica R² e RMSE.\n"
    ]
   },
   {
@@ -268,7 +268,7 @@
    "metadata": {},
    "source": [
     "## Classificação com Random Forest\n",
-    "Utilizamos Random Forest para prever a proximidade do oceano com base em outras características.\n"
+    "Utilizamos Random Forest para prever a proximidade do oceano.\n"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Elbow Method para o optimal 𝑘 \n",
+    "### Elbow Method para o optimal k \n",
     "\n",
     "Avalia o número ideal de clusters para o algoritmo K-Means utilizando a inércia."
    ]
@@ -372,9 +372,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Análise de Silhueta para o optimal 𝑘\n",
+    "### Análise de Silhueta para o optimal k\n",
     "\n",
-    "Mede o desempenho do clustering utilizando a pontuação de silhueta para diferentes valores de 𝑘."
+    "Mede o desempenho do clustering utilizando a pontuação de silhueta para diferentes valores de k."
    ]
   },
   {
